Yes, I know this is generated HTML;  But I don't have the original latex file;  Perhaps, I'll convert it to MS Word and then back to HTML
https://github.com/hasii2011/PyUt/issues/46

--- a/src/help/index.html
+++ b/src/help/index.html
@@ -9,8 +9,8 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
   Jens Lippmann, Marek Rouchal, Martin Wilck and others -->
 <HTML>
 <HEAD>
-<TITLE>PyUt 1.3 help</TITLE>
-<META NAME="description" CONTENT="PyUt 1.3 help">
+<TITLE>PyUt 1.4 help</TITLE>
+<META NAME="description" CONTENT="PyUt 1.4 help">
 <META NAME="keywords" CONTENT="main">
 <META NAME="resource-type" CONTENT="document">
 <META NAME="distribution" CONTENT="global">
@@ -26,37 +26,26 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 
 <BODY >
 <!--Navigation Panel-->
-<A NAME="tex2html17"
-  HREF="node1.html">
-<IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="../../../../Downloads/pyut-1.3a-20041228/pyut-1.3a-20041228/help/next.png"></A>
-<IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="../../../../Downloads/pyut-1.3a-20041228/pyut-1.3a-20041228/help/up_g.png">
-<IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="../../../../Downloads/pyut-1.3a-20041228/pyut-1.3a-20041228/help/prev_g.png">
-<A NAME="tex2html13"
-  HREF="node1.html">
-<IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="../../../../Downloads/pyut-1.3a-20041228/pyut-1.3a-20041228/help/contents.png"></A>
-<A NAME="tex2html15"
-  HREF="index.html">
-<IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="../../../../Downloads/pyut-1.3a-20041228/pyut-1.3a-20041228/help/index.png"></A>
+<A NAME="tex2html17" HREF="node1.html">
+    <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A>
+    <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up_g.png">
+    <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev_g.png">
+<A NAME="tex2html13" HREF="node1.html">
+    <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A>
+<A NAME="tex2html15" HREF="index.html">
+    <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A>
 <BR>
-<B> Next:</B> <A NAME="tex2html18"
-  HREF="node1.html">Contents</A>
- &nbsp <B>  <A NAME="tex2html14"
-  HREF="node1.html">Contents</A></B>
- &nbsp <B>  <A NAME="tex2html16"
-  HREF="index.html">Index</A></B>
+<B> Next:</B> <A NAME="tex2html18" HREF="node1.html">Contents</A> &nbsp
+<B>  <A NAME="tex2html14" HREF="node1.html">Contents</A></B>&nbsp <B>  <A NAME="tex2html16" HREF="index.html">Index</A></B>
 <BR>
 <BR>
 <!--End of Navigation Panel-->
-<DIV ALIGN="CENTER">
-<FONT SIZE="+4">        <I>PyUt 1.3</I>- Python Uml toolkit - Help
-        </FONT>        <BR>
-
-    <IMG
- WIDTH="201" HEIGHT="170" ALIGN="BOTTOM" BORDER="0"
- SRC="pics/pyut-logo.png"
- ALT="pyut-logo.png">
-
+<DIV class="super-duper-title" ALIGN="CENTER">
+    <i>PyUt 1.4</i>- Python Uml toolkit - Help
+    <BR>
+    <IMG WIDTH="201" HEIGHT="170" ALIGN="BOTTOM" BORDER="0" SRC="pics/pyut-logo.png" ALT="pyut-logo.png">
 </DIV>
+
 <BR><HR>
 <!--Table of Child-Links-->
 <A NAME="CHILD_LINKS"></A>
