--- a/src/help/main.html
+++ b/src/help/main.html
@@ -9,7 +9,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
   Jens Lippmann, Marek Rouchal, Martin Wilck and others -->
 <HTML>
 <HEAD>
-<TITLE>PyUt 1.3 help</TITLE>
+<TITLE>PyUt 1.4 help</TITLE>
 <META NAME="description" CONTENT="PyUt 1.3 help">
 <META NAME="keywords" CONTENT="main">
 <META NAME="resource-type" CONTENT="document">
@@ -25,97 +25,68 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 </HEAD>
 
 <BODY >
-<!--Navigation Panel-->
-<A NAME="tex2html17"
-  HREF="node1.html">
-<IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="../../../../Downloads/pyut-1.3a-20041228/pyut-1.3a-20041228/help/next.png"></A>
-<IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="../../../../Downloads/pyut-1.3a-20041228/pyut-1.3a-20041228/help/up_g.png">
-<IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="../../../../Downloads/pyut-1.3a-20041228/pyut-1.3a-20041228/help/prev_g.png">
-<A NAME="tex2html13"
-  HREF="node1.html">
-<IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="../../../../Downloads/pyut-1.3a-20041228/pyut-1.3a-20041228/help/contents.png"></A>
-<A NAME="tex2html15"
-  HREF="index.html">
-<IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="../../../../Downloads/pyut-1.3a-20041228/pyut-1.3a-20041228/help/index.png"></A>
-<BR>
-<B> Next:</B> <A NAME="tex2html18"
-  HREF="node1.html">Contents</A>
- &nbsp <B>  <A NAME="tex2html14"
-  HREF="node1.html">Contents</A></B>
- &nbsp <B>  <A NAME="tex2html16"
-  HREF="index.html">Index</A></B>
-<BR>
-<BR>
-<!--End of Navigation Panel-->
-<DIV ALIGN="CENTER">
-<FONT SIZE="+4">        <I>PyUt 1.3</I>- Python Uml toolkit - Help
-        </FONT>        <BR>
-
-    <IMG
- WIDTH="201" HEIGHT="170" ALIGN="BOTTOM" BORDER="0"
- SRC="pics/pyut-logo.png"
- ALT="pyut-logo.png">
-
+    <!--Navigation Panel-->
+    <A NAME="tex2html17" HREF="node1.html">
+        <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A>
+    <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up_g.png">
+    <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev_g.png">
+    <A NAME="tex2html13" HREF="node1.html">
+        <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A>
+    <A NAME="tex2html15" HREF="index.html">
+        <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A>
+    <BR>
+    <B> Next:</B> <A NAME="tex2html18" HREF="node1.html">Contents</A>
+     &nbsp <B>  <A NAME="tex2html14" HREF="node1.html">Contents</A></B>
+     &nbsp <B>  <A NAME="tex2html16" HREF="index.html">Index</A></B>
+    <BR>
+    <BR>
+    <!--End of Navigation Panel-->
+<DIV class="super-duper-title" ALIGN="CENTER">
+    <i>PyUt 1.4</i>- Python Uml toolkit - Help<BR>
+    <IMG WIDTH="201" HEIGHT="170" ALIGN="BOTTOM" BORDER="0" SRC="pics/pyut-logo.png" ALT="pyut-logo.png">
 </DIV>
-<BR><HR>
+
+<BR>
+<HR>
 <!--Table of Child-Links-->
 <A NAME="CHILD_LINKS"></A>
 
-<UL>
-<LI><A NAME="tex2html19"
-  HREF="node1.html">Contents</A>
-<LI><A NAME="tex2html20"
-  HREF="node2.html">Introduction</A>
-<LI><A NAME="tex2html21"
-  HREF="node3.html"><I>PyUt</I> installation</A>
-<UL>
-<LI><A NAME="tex2html22"
-  HREF="node3.html#SECTION00031000000000000000">Prerequisites</A>
-<LI><A NAME="tex2html23"
-  HREF="node3.html#SECTION00032000000000000000">Installation</A>
-</UL>
-<BR>
-<LI><A NAME="tex2html24"
-  HREF="node4.html">UML reminder</A>
-<UL>
-<LI><A NAME="tex2html25"
-  HREF="node4.html#SECTION00041000000000000000">Class diagrams</A>
-<LI><A NAME="tex2html26"
-  HREF="node4.html#SECTION00042000000000000000">Use cases diagrams</A>
-</UL>
-<BR>
-<LI><A NAME="tex2html27"
-  HREF="node5.html">Interface</A>
-<UL>
-<LI><A NAME="tex2html28"
-  HREF="node5.html#SECTION00051000000000000000">Graphical interface</A>
-<LI><A NAME="tex2html29"
-  HREF="node5.html#SECTION00052000000000000000">Menus</A>
-<LI><A NAME="tex2html30"
-  HREF="node5.html#SECTION00053000000000000000">Toolbar</A>
-</UL>
-<BR>
-<LI><A NAME="tex2html31"
-  HREF="node6.html">Guided sample</A>
-<UL>
-<LI><A NAME="tex2html32"
-  HREF="node6.html#SECTION00061000000000000000">On the beginning, there was... nothing</A>
-<LI><A NAME="tex2html33"
-  HREF="node6.html#SECTION00062000000000000000">Class insertion</A>
-<LI><A NAME="tex2html34"
-  HREF="node6.html#SECTION00063000000000000000">Note insertion</A>
-<LI><A NAME="tex2html35"
-  HREF="node6.html#SECTION00064000000000000000">Actor and use case insertion</A>
-<LI><A NAME="tex2html36"
-  HREF="node6.html#SECTION00065000000000000000">Links</A>
-<LI><A NAME="tex2html37"
-  HREF="node6.html#SECTION00066000000000000000">Saving...</A>
-<LI><A NAME="tex2html38"
-  HREF="node6.html#SECTION00067000000000000000">The end</A>
-</UL>
-<BR>
-<LI><A NAME="tex2html39"
-  HREF="node7.html">About this document ...</A>
+    <UL>
+        <LI><A NAME="tex2html19" HREF="node1.html">Contents</A>
+        <LI><A NAME="tex2html20" HREF="node2.html">Introduction</A>
+        <LI><A NAME="tex2html21" HREF="node3.html"><I>PyUt</I> installation</A>
+    <UL>
+        <LI><A NAME="tex2html22" HREF="node3.html#SECTION00031000000000000000">Prerequisites</A>
+        <LI><A NAME="tex2html23" HREF="node3.html#SECTION00032000000000000000">Installation</A>
+    </UL>
+
+        <BR>
+    <LI><A NAME="tex2html24" HREF="node4.html">UML reminder</A>
+    <UL>
+        <LI><A NAME="tex2html25" HREF="node4.html#SECTION00041000000000000000">Class diagrams</A>
+        <LI><A NAME="tex2html26" HREF="node4.html#SECTION00042000000000000000">Use cases diagrams</A>
+    </UL>
+    <BR>
+    <LI><A NAME="tex2html27" HREF="node5.html">Interface</A>
+    <UL>
+        <LI><A NAME="tex2html28" HREF="node5.html#SECTION00051000000000000000">Graphical interface</A>
+        <LI><A NAME="tex2html29" HREF="node5.html#SECTION00052000000000000000">Menus</A>
+        <LI><A NAME="tex2html30" HREF="node5.html#SECTION00053000000000000000">Toolbar</A>
+    </UL>
+
+    <BR>
+    <LI><A NAME="tex2html31" HREF="node6.html">Guided sample</A>
+    <UL>
+    <LI><A NAME="tex2html32" HREF="node6.html#SECTION00061000000000000000">On the beginning, there was... nothing</A>
+        <LI><A NAME="tex2html33" HREF="node6.html#SECTION00062000000000000000">Class insertion</A>
+        <LI><A NAME="tex2html34" HREF="node6.html#SECTION00063000000000000000">Note insertion</A>
+        <LI><A NAME="tex2html35" HREF="node6.html#SECTION00064000000000000000">Actor and use case insertion</A>
+        <LI><A NAME="tex2html36" HREF="node6.html#SECTION00065000000000000000">Links</A>
+        <LI><A NAME="tex2html37" HREF="node6.html#SECTION00066000000000000000">Saving...</A>
+        <LI><A NAME="tex2html38" HREF="node6.html#SECTION00067000000000000000">The end</A>
+    </UL>
+    <BR>
+    <LI><A NAME="tex2html39" HREF="node7.html">About this document ...</A>
 </UL>
 <!--End of Table of Child-Links-->
 <BR><HR>
